ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiii-ingress
  namespace: kiii-proekt
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: 186051.com
      http:
        paths:
          - path: /product(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /order(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
